--- a/src/main/resources/templates/doctor/doctor-update-profile.html
+++ b/src/main/resources/templates/doctor/doctor-update-profile.html
@@ -197,7 +197,7 @@
         <h2>Profile</h2>
 
         <div class="container">
-            <form class="mt-5" method="post" th:action="@{/doctor/update}" th:object="${doctor}">
+            <form class="mt-5" method="post" th:action="@{/doctor/update}" enctype="multipart/form-data" th:object="${doctor}">
                 <div class="form-group">
                     <label for="email" class="label-text"> Email</label>
                     <input readonly class="form-control" type="email" id="email" name="email" required="required" th:field="${doctor.email}">
@@ -222,19 +222,19 @@
                     <label for="phoneNumber" class="label-text">Phone number</label>
                     <input  class="form-control" type="text" id="phoneNumber" name="phoneNumber" required="required" th:field="${doctor.phoneNumber}">
                 </div>
-                <div class="form-group">
+                <div class="form-group" style="margin-bottom: 10px">
                     <label for="specialization" class="label-text">Specialization</label>
                     <input  class="form-control" type="text" id="specialization" name="specialization" required="required" th:field="${doctor.specialization}">
                 </div>
+                <div class="form-group">
+                    <label for="profileImg" class="label-text">Profile Image</label>
+                    <input type="file" name="profileImg" accept="image/jpeg, image/png"  id="profileImg"/>
+                </div>
+                <input type="hidden" id="imgName" name="imgName" th:value="${doctor.profileImg}">
                 <button type="submit" class="button-submit">Submit</button>
             </form>
         </div>
     </div>
-<!--    <div class="image-right">-->
-<!--        <a href="/doctor/update/profile">-->
-<!--            <img src="https://cdn-icons-png.flaticon.com/512/1827/1827951.png" width="35" height="35" alt="Edit profile">-->
-<!--        </a>-->
-<!--    </div>-->
 </div>
 </body>
 </html>
