--- a/src/main/resources/templates/client/doctor-details.html
+++ b/src/main/resources/templates/client/doctor-details.html
@@ -47,6 +47,9 @@
 
         .doctor-profile img {
             border-radius: 50%;
+
+            background-image: url('https://img.freepik.com/free-icon/user_318-563642.jpg?w=360');
+            background-size: cover;
         }
 
         .profile-image {
