--- a/src/main/resources/templates/doctor/doctor-profile.html
+++ b/src/main/resources/templates/doctor/doctor-profile.html
@@ -161,6 +161,9 @@
 
     .image-left img {
       border-radius: 50%;
+
+      background-image: url('https://img.freepik.com/free-icon/user_318-563642.jpg?w=360');
+      background-size: cover;
     }
 
     .label-text {
