--- a/src/main/resources/templates/client/doctor-details.html
+++ b/src/main/resources/templates/client/doctor-details.html
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-<ul th:replace="navbar-layout :: clientNavBar"></ul>
+<ul th:replace="~{navbar-layout :: clientNavBar}"></ul>
 <div class="container mt-5">
     <table class="custom-table">
         <thead>
