--- a/src/main/resources/templates/client/help.html
+++ b/src/main/resources/templates/client/help.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-<ul th:replace="navbar-layout :: clientNavBar"></ul>
+<ul th:replace="~{navbar-layout :: clientNavBar}"></ul>
 
 <div class="container">
     <div class="center-content">
