--- a/src/main/resources/templates/doctor/help.html
+++ b/src/main/resources/templates/doctor/help.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 <body>
-<ul th:replace="navbar-layout :: doctorNavBar"></ul>
+<ul th:replace="~{navbar-layout :: doctorNavBar}"></ul>
 
 <div class="container">
     <div class="center-content">
