--- a/src/main/resources/templates/client/appointmentError.html
+++ b/src/main/resources/templates/client/appointmentError.html
@@ -55,7 +55,7 @@
 <div class="container">
     <div class="error-message">Warning!</div>
     <div class="info-message">
-        You already have an appointment scheduled and cannot make another one at this time.
+        You already made an appointment to this doctor.
     </div>
     <div class="button-container">
         <button class="back-button" onclick="goBack()">Go Back</button>
