--- a/src/main/resources/templates/client/client-update-profile.html
+++ b/src/main/resources/templates/client/client-update-profile.html
@@ -160,6 +160,12 @@
             margin-top: 100px;
         }
 
+        .image-left img {
+            border-radius: 50%;
+            background-image: url('https://img.freepik.com/free-icon/user_318-563642.jpg?w=360');
+            background-size: cover;
+        }
+
         .label-text {
             font-size: 14px;
             padding-top: 10px;
@@ -191,7 +197,7 @@
 
 <div class="container-fluid">
     <div class="image-left">
-        <img src="https://img.freepik.com/free-icon/user_318-563642.jpg?w=360" width="150" height="150">
+        <img th:src="@{${'/IMAGES/' + patient.profileImg}}" width="150" height="150">
     </div>
 
 
