--- a/src/main/resources/templates/doctor/doctor-update-profile.html
+++ b/src/main/resources/templates/doctor/doctor-update-profile.html
@@ -118,11 +118,6 @@
             margin: 0;
         }
 
-
-
-
-
-
         .container-fluid {
             display: flex;
             justify-content: space-between;
@@ -157,6 +152,12 @@
             margin-top: 100px;
         }
 
+        .image-left img {
+            border-radius: 50%;
+            background-image: url('https://img.freepik.com/free-icon/user_318-563642.jpg?w=360');
+            background-size: cover;
+        }
+
         .label-text {
             font-size: 14px;
             padding-top: 10px;
@@ -188,7 +189,7 @@
 
 <div class="container-fluid">
     <div class="image-left">
-        <img src="https://img.freepik.com/free-icon/user_318-563642.jpg?w=360" width="150" height="150">
+        <img th:src="@{${'/IMAGES/' + doctor.profileImg}}" width="150" height="150">
     </div>
 
 
